# advent-of-code

./: .gitignore  make_day.sh
2021/day01/: Cargo.toml  day01.rs
2022/day03/: Cargo.toml
2022/day10/: day10.rs
2022/day11/: Cargo.toml  day11.rs
2022/day12/: day12.rs
2022/day13/: Cargo.toml
2022/day14/: Cargo.toml
2022/day15/: Cargo.toml  day15.rs
2022/day17/: .vimspector.json  inputpatterns.txt  patterns.txt
2022/day18/: Cargo.toml  day18.rs
2022/day19/: day19.rs
2022/day21/: Cargo.toml  day21.rs
2022/day22/: Cargo.toml  day22.rs
2022/day23/: Cargo.toml
2022/day24/: test.txt
2023/: make_day.sh
2023/day01/: .vimspector.json  day01.rs  output  run.sh
2023/day02/: day02.rs  (+1 more)
2023/day12/: Cargo.toml  day12.rs  example5.txt
day02/: day2.rs
day03/: day3.rs
day04/: Cargo.toml
day05/: Cargo.toml
day06/: Cargo.toml  day6.rs
day07/: Cargo.toml  day7.rs
day08/: Cargo.toml  run.sh
day09/: Cargo.toml  day9.rs
day1/: day1-functional.rs  day1.rs
day10/: day10.rs
day11/: Cargo.toml
day12/: Cargo.toml  day12.rs
day13/: day13.rs
day14/: day14.rs
day15/: Cargo.toml  day15.rs
day16/: Cargo.toml  day16.rs
day17/: day17-new.rs  day17.rs
day18/: day18.rs
day19/: Cargo.toml  day19.rs
day2/: Cargo.toml
day20/: Cargo.toml  day20.rs
day21/: -  day21.rs
day22/: Cargo.toml  day22.rs
day23/: day23.rs
day24/: Cargo.toml  day24.rs
day25/: Cargo.toml  day25.rs
day4/: day4.rs
day5/: Cargo.toml  day5.rs
day6/: day6.rs
day8/: day8.rs
day9/: Cargo.toml  day9.rs
template/: .vimspector.json  Cargo.toml  template.rs
(+55 files in other folders)
