[package]
name = "day12"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
once_cell = "1.16.0"
itertools = "*"
rstest = "0.18.2"
indicatif = "0.17.7"
pariter = "0.5.1"

[[bin]]
name = "day12"
path = "day12.rs"
